--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@ant-design/icons": "^4.3.0",
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@paypal/react-paypal-js": "^7.8.1",
+        "@wert-io/module-react-component": "^1.0.0",
         "antd": "^4.9.3",
         "b70-checkout": "0.8.1",
         "@hansekontor/checkout-components": "1.0.0",
@@ -20,6 +21,7 @@
         "lodash.isequal": "^4.5.0",
         "qrcode.react": "^1.0.0",
         "react": "^17.0.1",
+        "react-acceptjs": "git+https://github.com/badger-cash/react-acceptjs#badgerwallet",
         "react-copy-to-clipboard": "^5.0.3",
         "react-dev-utils": "^11.0.4",
         "react-device-detect": "^1.15.0",
