--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dependencies": {
         "@ant-design/icons": "^4.3.0",
         "@fortawesome/fontawesome-free": "^5.15.1",
+        "@hansekontor/checkout-components": "1.0.0",
         "@paypal/react-paypal-js": "^7.8.1",
         "@wert-io/module-react-component": "^1.0.0",
         "antd": "^4.9.3",
         "b70-checkout": "0.8.1",
-        "@hansekontor/checkout-components": "1.0.0",
         "bignumber.js": "^9.0.0",
         "dotenv": "^8.2.0",
         "dotenv-expand": "^5.1.0",
@@ -32,8 +32,7 @@
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "styled-components": "^4.4.0",
-        "zoid": "^9.0.86"
-
+        "zoid": "9.0.87"
     },
     "lint-staged": {
         "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
