--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@hansekontor/checkout-components": "1.0.0",
         "@paypal/react-paypal-js": "^7.8.1",
-        "@wert-io/module-react-component": "^1.0.0",
         "antd": "^4.9.3",
         "b70-checkout": "0.8.1",
         "bignumber.js": "^9.0.0",
@@ -20,12 +19,12 @@
         "lodash.isempty": "^4.4.0",
         "lodash.isequal": "^4.5.0",
         "qrcode.react": "^1.0.0",
-        "react": "^17.0.1",
+        "react": "17.0.2",
         "react-acceptjs": "git+https://github.com/badger-cash/react-acceptjs#badgerwallet",
         "react-copy-to-clipboard": "^5.0.3",
         "react-dev-utils": "^11.0.4",
         "react-device-detect": "^1.15.0",
-        "react-dom": "^17.0.1",
+        "react-dom": "17.0.2",
         "react-easy-crop": "^3.5.3",
         "react-ga": "^3.3.0",
         "react-image": "^4.0.3",
